project.output
Terminals unused in grammar

   UNKNOWN_CHAR
   UMINUS


State 247 conflicts: 2 reduce/reduce
State 251 conflicts: 2 reduce/reduce
State 381 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: function
    2        | function program

    3 function: FUNC return_type IDENT LEFT_PARANT parameter_list RIGHT_PARANT block
    4         | error

    5 return_type: data_type
    6            | data_type DOLLAR_SIGN
    7            | geo_types
    8            | geo_types DOLLAR_SIGN
    9            | three_d_objects
   10            | three_d_objects DOLLAR_SIGN
   11            | empty

   12 parameter_list: empty
   13               | VOID
   14               | data_type IDENT
   15               | data_type DOLLAR_SIGN IDENT
   16               | geo_types IDENT
   17               | geo_types DOLLAR_SIGN IDENT
   18               | three_d_objects IDENT
   19               | three_d_objects DOLLAR_SIGN IDENT
   20               | parameter_list COMMA data_type IDENT
   21               | parameter_list COMMA data_type DOLLAR_SIGN IDENT
   22               | parameter_list COMMA geo_types IDENT
   23               | parameter_list COMMA geo_types DOLLAR_SIGN IDENT
   24               | parameter_list COMMA three_d_objects IDENT
   25               | parameter_list COMMA three_d_objects DOLLAR_SIGN IDENT

   26 argument_list: empty
   27              | IDENT
   28              | literal
   29              | argument_list COMMA IDENT
   30              | argument_list COMMA literal

   31 block: CURLY_OPEN stmt_list CURLY_CLOSE
   32      | CURLY_OPEN empty CURLY_CLOSE

   33 stmt_list: stmt
   34          | stmt_list stmt

   35 stmt: declaration SEMICOLON
   36     | assignment SEMICOLON
   37     | function_call SEMICOLON
   38     | BREAK SEMICOLON
   39     | CONTINUE SEMICOLON
   40     | RETURN SEMICOLON
   41     | RETURN arithmetic_exp SEMICOLON
   42     | loop
   43     | if_stmt

   44 declaration: data_type IDENT
   45            | data_type IDENT EQUAL_OP RHS
   46            | data_type DOLLAR_SIGN IDENT EQUAL_OP CURLY_OPEN literal_list CURLY_CLOSE
   47            | GPS IDENT EQUAL_OP tuple
   48            | GPS DOLLAR_SIGN IDENT EQUAL_OP CURLY_OPEN tuple_list CURLY_CLOSE
   49            | ROAD IDENT EQUAL_OP road
   50            | CROSSROAD IDENT EQUAL_OP cross_road
   51            | ROAD DOLLAR_SIGN IDENT EQUAL_OP CURLY_OPEN roads_list CURLY_CLOSE
   52            | CROSSROAD DOLLAR_SIGN IDENT EQUAL_OP CURLY_OPEN cross_roads_list CURLY_CLOSE
   53            | GRAPH IDENT EQUAL_OP CURLY_OPEN graph_arguments CURLY_CLOSE
   54            | USER IDENT EQUAL_OP LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
   55            | three_d_objects IDENT EQUAL_OP LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
   56            | three_d_objects DOLLAR_SIGN IDENT EQUAL_OP CURLY_OPEN three_d_arguments CURLY_CLOSE

   57 three_d_arguments: LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
   58                  | IDENT
   59                  | empty
   60                  | three_d_arguments COMMA LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
   61                  | three_d_arguments COMMA IDENT

   62 graph_arguments: empty
   63                | IDENT COMMA IDENT
   64                | IDENT COMMA LEFT_PARANT roads_list RIGHT_PARANT
   65                | LEFT_PARANT cross_roads_list RIGHT_PARANT COMMA IDENT
   66                | LEFT_PARANT cross_roads_list RIGHT_PARANT COMMA LEFT_PARANT roads_list RIGHT_PARANT

   67 road: LEFT_PARANT tuple COMMA tuple RIGHT_PARANT
   68     | LEFT_PARANT tuple COMMA IDENT RIGHT_PARANT
   69     | LEFT_PARANT IDENT COMMA tuple RIGHT_PARANT
   70     | LEFT_PARANT IDENT COMMA IDENT RIGHT_PARANT

   71 cross_road: tuple
   72           | IDENT

   73 roads_list: empty
   74           | road
   75           | IDENT
   76           | roads_list COMMA road
   77           | roads_list COMMA IDENT

   78 cross_roads_list: cross_road
   79                 | cross_roads_list COMMA cross_road

   80 tuple: LEFT_PARANT long_lat_param COMMA long_lat_param RIGHT_PARANT
   81      | empty

   82 literal_list: empty
   83             | literal
   84             | literal_list COMMA literal

   85 tuple_list: tuple
   86           | tuple_list COMMA tuple

   87 arithmetic_exp: term
   88               | arithmetic_exp ADD_OP term
   89               | arithmetic_exp SUB_OP term

   90 term: literal
   91     | IDENT
   92     | LEFT_PARANT arithmetic_exp RIGHT_PARANT
   93     | term MULTIPLY_OP literal
   94     | term DIVIDE_OP literal
   95     | term POW_OP literal
   96     | term MOD_OP literal
   97     | term MULTIPLY_OP IDENT
   98     | term DIVIDE_OP IDENT
   99     | term POW_OP IDENT
  100     | term MOD_OP IDENT

  101 RHS: arithmetic_exp
  102    | function_call
  103    | bool_exp
  104    | error

  105 function_call: IDENT LEFT_PARANT argument_list RIGHT_PARANT
  106              | BLTIN_SHOW_ON_MAP LEFT_PARANT long_lat_param COMMA long_lat_param RIGHT_PARANT
  107              | BLTIN_SEARCH_LOCATION LEFT_PARANT str_param RIGHT_PARANT
  108              | BLTIN_GET_ROAD_SPEED LEFT_PARANT road_param RIGHT_PARANT
  109              | BLTIN_GET_LOCATION LEFT_PARANT user_param RIGHT_PARANT
  110              | BLTIN_TARGET LEFT_PARANT str_param RIGHT_PARANT
  111              | BLTIN_GET_ROADS LEFT_PARANT cross_road RIGHT_PARANT
  112              | BLTIN_GET_CROSSROADS LEFT_PARANT road_param RIGHT_PARANT
  113              | BLTIN_GET_ROADS_NUM LEFT_PARANT cross_road RIGHT_PARANT
  114              | BLTIN_GET_CROSSROADS_NUM LEFT_PARANT road_param RIGHT_PARANT
  115              | BLTIN_COLLOBORATE_USERS LEFT_PARANT user_param RIGHT_PARANT
  116              | BLTIN_INSTRUCT_USER LEFT_PARANT user_param COMMA destination RIGHT_PARANT
  117              | BLTIN_INCREASE_SCORE_OF_ROAD LEFT_PARANT road_param RIGHT_PARANT
  118              | BLTIN_DECREASE_SCORE_OF_ROAD LEFT_PARANT road_param RIGHT_PARANT
  119              | BLTIN_GET_SCORE_OF_ROAD LEFT_PARANT road_param RIGHT_PARANT
  120              | BLTIN_SHOW_ROAD_ON_MAP LEFT_PARANT road_param RIGHT_PARANT
  121              | BLTIN_SHOW_CROSSROAD_ON_MAP LEFT_PARANT cross_road RIGHT_PARANT
  122              | BLTIN_ADD_CROSSROAD LEFT_PARANT IDENT COMMA cross_road RIGHT_PARANT
  123              | BLTIN_ADD_ROAD LEFT_PARANT IDENT COMMA road_param RIGHT_PARANT
  124              | BLTIN_PRINT LEFT_PARANT argument_list RIGHT_PARANT

  125 destination: LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
  126            | cross_road

  127 user_param: LEFT_PARANT str_param COMMA cross_road RIGHT_PARANT
  128           | IDENT

  129 road_param: road
  130           | IDENT

  131 str_param: STR_LITERAL
  132          | IDENT

  133 long_lat_param: FLOAT_LITERAL
  134               | IDENT

  135 literal: SUB_OP INT_LITERAL
  136        | ADD_OP INT_LITERAL
  137        | SUB_OP FLOAT_LITERAL
  138        | ADD_OP FLOAT_LITERAL
  139        | INT_LITERAL
  140        | FLOAT_LITERAL
  141        | STR_LITERAL
  142        | CHAR_LITERAL

  143 assignment_op: EQUAL_OP
  144              | MULTIPLY_OP
  145              | DIVIDE_OP
  146              | SUB_OP
  147              | ADD_OP
  148              | MOD_OP
  149              | POW_OP

  150 assignment: LHS assignment_op RHS

  151 LHS: IDENT
  152    | error

  153 loop: while
  154     | for

  155 while: WHILE LEFT_PARANT bool_exp RIGHT_PARANT block

  156 for: FOR LEFT_PARANT for_stmt RIGHT_PARANT block

  157 for_stmt: for_init SEMICOLON bool_exp SEMICOLON assignment

  158 for_init: declaration
  159         | assignment

  160 if_stmt: IF LEFT_PARANT bool_exp RIGHT_PARANT block
  161        | IF LEFT_PARANT function_call RIGHT_PARANT block
  162        | if_stmt ELIF LEFT_PARANT bool_exp RIGHT_PARANT block
  163        | if_stmt ELSE block

  164 bool_exp: comparison
  165         | IDENT
  166         | NOT_OP IDENT
  167         | TRUE
  168         | FALSE
  169         | literal

  170 comparison: IDENT relational_op compared
  171           | bool_exp logic_op compared
  172           | function_call relational_op compared

  173 compared: IDENT
  174         | FALSE
  175         | TRUE
  176         | literal

  177 relational_op: LESS_EQ_OP
  178              | GREATER_EQ_OP
  179              | NOT_EQ_OP
  180              | EQUALITY_OP
  181              | LESS_OP
  182              | GREATER_OP

  183 logic_op: AND_OP
  184         | OR_OP

  185 data_type: CHAR
  186          | INT
  187          | FLOAT
  188          | BOOL
  189          | STR

  190 three_d_objects: HOME
  191                | HOSPITAL
  192                | SCHOOL
  193                | BRIDGE
  194                | MALL
  195                | BUSSTOP
  196                | HOTEL
  197                | POSTOFFICE

  198 geo_types: GPS
  199          | ROAD
  200          | CROSSROAD
  201          | USER

  202 empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 4 104 152
CHAR (258) 185
INT (259) 186
FLOAT (260) 187
BOOL (261) 188
STR (262) 189
VOID (263) 13
TRUE (264) 167 175
FALSE (265) 168 174
AND_OP (266) 183
OR_OP (267) 184
DOLLAR_SIGN (268) 6 8 10 15 17 19 21 23 25 46 48 51 52 56
NOT_OP (269) 166
IDENT (270) 3 14 15 16 17 18 19 20 21 22 23 24 25 27 29 44 45 46 47
    48 49 50 51 52 53 54 55 56 58 61 63 64 65 68 69 70 72 75 77 91
    97 98 99 100 105 122 123 128 130 132 134 151 165 166 170 173
IF (271) 160 161
ELIF (272) 162
ELSE (273) 163
WHILE (274) 155
FOR (275) 156
BREAK (276) 38
CONTINUE (277) 39
FUNC (278) 3
RETURN (279) 40 41
BLTIN_SHOW_ON_MAP (280) 106
BLTIN_SEARCH_LOCATION (281) 107
BLTIN_GET_ROAD_SPEED (282) 108
BLTIN_GET_LOCATION (283) 109
BLTIN_TARGET (284) 110
BLTIN_GET_ROADS (285) 111
BLTIN_GET_CROSSROADS (286) 112
BLTIN_GET_CROSSROADS_NUM (287) 114
BLTIN_GET_ROADS_NUM (288) 113
LESS_EQ_OP (289) 177
GREATER_EQ_OP (290) 178
NOT_EQ_OP (291) 179
EQUALITY_OP (292) 180
LESS_OP (293) 181
GREATER_OP (294) 182
EQUAL_OP (295) 45 46 47 48 49 50 51 52 53 54 55 56 143
MULTIPLY_OP (296) 93 97 144
DIVIDE_OP (297) 94 98 145
SUB_OP (298) 89 135 137 146
ADD_OP (299) 88 136 138 147
MOD_OP (300) 96 100 148
POW_OP (301) 95 99 149
INT_LITERAL (302) 135 136 139
FLOAT_LITERAL (303) 133 137 138 140
STR_LITERAL (304) 131 141
CHAR_LITERAL (305) 142
COMMA (306) 20 21 22 23 24 25 29 30 54 55 57 60 61 63 64 65 66 67 68
    69 70 76 77 79 80 84 86 106 116 122 123 125 127
SEMICOLON (307) 35 36 37 38 39 40 41 157
LEFT_PARANT (308) 3 54 55 57 60 64 65 66 67 68 69 70 80 92 105 106
    107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124 125 127 155 156 160 161 162
RIGHT_PARANT (309) 3 54 55 57 60 64 65 66 67 68 69 70 80 92 105 106
    107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124 125 127 155 156 160 161 162
CURLY_OPEN (310) 31 32 46 48 51 52 53 56
CURLY_CLOSE (311) 31 32 46 48 51 52 53 56
UNKNOWN_CHAR (312)
GPS (313) 47 48 198
ROAD (314) 49 51 199
CROSSROAD (315) 50 52 200
GRAPH (316) 53
USER (317) 54 201
HOME (318) 190
HOSPITAL (319) 191
SCHOOL (320) 192
BRIDGE (321) 193
MALL (322) 194
BUSSTOP (323) 195
HOTEL (324) 196
POSTOFFICE (325) 197
BLTIN_COLLOBORATE_USERS (326) 115
BLTIN_INSTRUCT_USER (327) 116
BLTIN_INCREASE_SCORE_OF_ROAD (328) 117
BLTIN_DECREASE_SCORE_OF_ROAD (329) 118
BLTIN_GET_SCORE_OF_ROAD (330) 119
BLTIN_SHOW_ROAD_ON_MAP (331) 120
BLTIN_SHOW_CROSSROAD_ON_MAP (332) 121
BLTIN_ADD_CROSSROAD (333) 122
BLTIN_ADD_ROAD (334) 123
BLTIN_PRINT (335) 124
UMINUS (336)


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
program (83)
    on left: 1 2, on right: 0 2
function (84)
    on left: 3 4, on right: 1 2
return_type (85)
    on left: 5 6 7 8 9 10 11, on right: 3
parameter_list (86)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 3
    20 21 22 23 24 25
argument_list (87)
    on left: 26 27 28 29 30, on right: 29 30 105 124
block (88)
    on left: 31 32, on right: 3 155 156 160 161 162 163
stmt_list (89)
    on left: 33 34, on right: 31 34
stmt (90)
    on left: 35 36 37 38 39 40 41 42 43, on right: 33 34
declaration (91)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56, on right: 35 158
three_d_arguments (92)
    on left: 57 58 59 60 61, on right: 56 60 61
graph_arguments (93)
    on left: 62 63 64 65 66, on right: 53
road (94)
    on left: 67 68 69 70, on right: 49 74 76 129
cross_road (95)
    on left: 71 72, on right: 50 54 55 57 60 78 79 111 113 121 122
    125 126 127
roads_list (96)
    on left: 73 74 75 76 77, on right: 51 64 66 76 77
cross_roads_list (97)
    on left: 78 79, on right: 52 65 66 79
tuple (98)
    on left: 80 81, on right: 47 67 68 69 71 85 86
literal_list (99)
    on left: 82 83 84, on right: 46 84
tuple_list (100)
    on left: 85 86, on right: 48 86
arithmetic_exp (101)
    on left: 87 88 89, on right: 41 88 89 92 101
term (102)
    on left: 90 91 92 93 94 95 96 97 98 99 100, on right: 87 88 89
    93 94 95 96 97 98 99 100
RHS (103)
    on left: 101 102 103 104, on right: 45 150
function_call (104)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    119 120 121 122 123 124, on right: 37 102 161 172
destination (105)
    on left: 125 126, on right: 116
user_param (106)
    on left: 127 128, on right: 109 115 116
road_param (107)
    on left: 129 130, on right: 108 112 114 117 118 119 120 123
str_param (108)
    on left: 131 132, on right: 54 55 57 60 107 110 125 127
long_lat_param (109)
    on left: 133 134, on right: 80 106
literal (110)
    on left: 135 136 137 138 139 140 141 142, on right: 28 30 83 84
    90 93 94 95 96 169 176
assignment_op (111)
    on left: 143 144 145 146 147 148 149, on right: 150
assignment (112)
    on left: 150, on right: 36 157 159
LHS (113)
    on left: 151 152, on right: 150
loop (114)
    on left: 153 154, on right: 42
while (115)
    on left: 155, on right: 153
for (116)
    on left: 156, on right: 154
for_stmt (117)
    on left: 157, on right: 156
for_init (118)
    on left: 158 159, on right: 157
if_stmt (119)
    on left: 160 161 162 163, on right: 43 162 163
bool_exp (120)
    on left: 164 165 166 167 168 169, on right: 103 155 157 160 162
    171
comparison (121)
    on left: 170 171 172, on right: 164
compared (122)
    on left: 173 174 175 176, on right: 170 171 172
relational_op (123)
    on left: 177 178 179 180 181 182, on right: 170 172
logic_op (124)
    on left: 183 184, on right: 171
data_type (125)
    on left: 185 186 187 188 189, on right: 5 6 14 15 20 21 44 45 46
three_d_objects (126)
    on left: 190 191 192 193 194 195 196 197, on right: 9 10 18 19
    24 25 55 56
geo_types (127)
    on left: 198 199 200 201, on right: 7 8 16 17 22 23
empty (128)
    on left: 202, on right: 11 12 26 32 59 62 73 81 82


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    FUNC   shift, and go to state 2

    program   go to state 3
    function  go to state 4


State 1

    4 function: error .

    $default  reduce using rule 4 (function)


State 2

    3 function: FUNC . return_type IDENT LEFT_PARANT parameter_list RIGHT_PARANT block

    CHAR        shift, and go to state 5
    INT         shift, and go to state 6
    FLOAT       shift, and go to state 7
    BOOL        shift, and go to state 8
    STR         shift, and go to state 9
    GPS         shift, and go to state 10
    ROAD        shift, and go to state 11
    CROSSROAD   shift, and go to state 12
    USER        shift, and go to state 13
    HOME        shift, and go to state 14
    HOSPITAL    shift, and go to state 15
    SCHOOL      shift, and go to state 16
    BRIDGE      shift, and go to state 17
    MALL        shift, and go to state 18
    BUSSTOP     shift, and go to state 19
    HOTEL       shift, and go to state 20
    POSTOFFICE  shift, and go to state 21

    $default  reduce using rule 202 (empty)

    return_type      go to state 22
    data_type        go to state 23
    three_d_objects  go to state 24
    geo_types        go to state 25
    empty            go to state 26


State 3

    0 $accept: program . $end

    $end  shift, and go to state 27


State 4

    1 program: function .
    2        | function . program

    error  shift, and go to state 1
    FUNC   shift, and go to state 2

    $end  reduce using rule 1 (program)

    program   go to state 28
    function  go to state 4


State 5

  185 data_type: CHAR .

    $default  reduce using rule 185 (data_type)


State 6

  186 data_type: INT .

    $default  reduce using rule 186 (data_type)


State 7

  187 data_type: FLOAT .

    $default  reduce using rule 187 (data_type)


State 8

  188 data_type: BOOL .

    $default  reduce using rule 188 (data_type)


State 9

  189 data_type: STR .

    $default  reduce using rule 189 (data_type)


State 10

  198 geo_types: GPS .

    $default  reduce using rule 198 (geo_types)


State 11

  199 geo_types: ROAD .

    $default  reduce using rule 199 (geo_types)


State 12

  200 geo_types: CROSSROAD .

    $default  reduce using rule 200 (geo_types)


State 13

  201 geo_types: USER .

    $default  reduce using rule 201 (geo_types)


State 14

  190 three_d_objects: HOME .

    $default  reduce using rule 190 (three_d_objects)


State 15

  191 three_d_objects: HOSPITAL .

    $default  reduce using rule 191 (three_d_objects)


State 16

  192 three_d_objects: SCHOOL .

    $default  reduce using rule 192 (three_d_objects)


State 17

  193 three_d_objects: BRIDGE .

    $default  reduce using rule 193 (three_d_objects)


State 18

  194 three_d_objects: MALL .

    $default  reduce using rule 194 (three_d_objects)


State 19

  195 three_d_objects: BUSSTOP .

    $default  reduce using rule 195 (three_d_objects)


State 20

  196 three_d_objects: HOTEL .

    $default  reduce using rule 196 (three_d_objects)


State 21

  197 three_d_objects: POSTOFFICE .

    $default  reduce using rule 197 (three_d_objects)


State 22

    3 function: FUNC return_type . IDENT LEFT_PARANT parameter_list RIGHT_PARANT block

    IDENT  shift, and go to state 29


State 23

    5 return_type: data_type .
    6            | data_type . DOLLAR_SIGN

    DOLLAR_SIGN  shift, and go to state 30

    $default  reduce using rule 5 (return_type)


State 24

    9 return_type: three_d_objects .
   10            | three_d_objects . DOLLAR_SIGN

    DOLLAR_SIGN  shift, and go to state 31

    $default  reduce using rule 9 (return_type)


State 25

    7 return_type: geo_types .
    8            | geo_types . DOLLAR_SIGN

    DOLLAR_SIGN  shift, and go to state 32

    $default  reduce using rule 7 (return_type)


State 26

   11 return_type: empty .

    $default  reduce using rule 11 (return_type)


State 27

    0 $accept: program $end .

    $default  accept


State 28

    2 program: function program .

    $default  reduce using rule 2 (program)


State 29

    3 function: FUNC return_type IDENT . LEFT_PARANT parameter_list RIGHT_PARANT block

    LEFT_PARANT  shift, and go to state 33


State 30

    6 return_type: data_type DOLLAR_SIGN .

    $default  reduce using rule 6 (return_type)


State 31

   10 return_type: three_d_objects DOLLAR_SIGN .

    $default  reduce using rule 10 (return_type)


State 32

    8 return_type: geo_types DOLLAR_SIGN .

    $default  reduce using rule 8 (return_type)


State 33

    3 function: FUNC return_type IDENT LEFT_PARANT . parameter_list RIGHT_PARANT block
